# dhcp-project

./: .gitignore  README.md  run.sh
CUDA/: CMakeLists.txt  Mandelbrot.cpp  MandelbrotGenerator.hpp  Mandelbrot_CUDA_results_note_v2.txt  README.md  TricornGenerator.cpp  cosine  cosine.cu  julia  julia.cu  mandelbrot  mandelbrot.cu  report_tricorn_20000_16000_2000.nsys-rep  run.sh  tricorn  tricorn.cu
CUDA/results/: Efficiency.docx  fractals_data.xlsx  report_cosine_20000_16000_2000.nsys-rep  report_julia_20000_16000_2000.nsys-rep  report_mandelbrot_20000_16000_2000.nsys-rep
CUDA/simple_implementation/: Mandelbrot_CUDA_results_note.txt  README.md  mandelbrot  mandelbrot.cu
Labs OMP/Lab2/: atan
Labs OMP/Lab2/files/: f16  f38  f41  f45  f46  f52  f56  f66  f67  f72  f84  f9  f92  f97
Labs OMP/Lab3/: tree.c
Labs/Lab2/: count_letters  schedule  schedule.c
Labs/Lab2/files/: f1  f10  f100  f11  f12  f13  f14  f15  f17  f18  f2  f21  f22  f23  f26  f28  f29  f3  f31  f32  f33  f34  f35  f36  f39  f4  f40  f42  f43  f44  f47  f49  f5  f50  f51  f53  f54  f55  f57  f58  (+29 more)
Labs/Lab3/: atomic_times  critica_times  reduction_times  tree
OpenMP/: CMakeLists.txt  Cosine.cpp  FractalGenerator.cpp  Julia.cpp  README.md  TricornGenerator.hpp
OpenMP/Labs OMP/Lab2/files/: f19  f20  f24  f25  f27  f37  f48  f68  f93
OpenMP/Labs OMP/Lab3/: main  main.c
OpenMP/Labs_OMP/Lab2/: atan.c  count_letters.cpp
OpenMP/Labs_OMP/Lab2/files/: f30  f64  f73  f77  f8  f83  f88  f89
OpenMP/Profiling_OMP/: DHPC.xlsx  Plots_local.mlx  Plots_server.mlx
Profiling OMP/: DHPC.xlsx  Plots_server.mlx
Serial/: .gitignore  CMakeLists.txt  CosineGenerator.cpp  Cosinus.cpp  CosinusGenerator.cpp  CosinusGenerator.hpp  FractalGenerator.cpp  FractalGenerator.hpp  JuliaGenerator.cpp  JuliaGenerator.hpp  Mandelbrot.cpp  MandelbrotGenerator.cpp  MandelbrotGenerator.hpp  README.md  Utils.cpp  Utils.hpp  main.cpp
TBB/: CMakeLists.txt  Cosine.cpp  CosineGenerator.cpp  CosineGenerator.hpp  FractalGenerator.cpp  FractalGenerator.hpp  Julia.cpp  JuliaGenerator.cpp  JuliaGenerator.hpp  Mandelbrot.cpp  MandelbrotGenerator.cpp  MandelbrotGenerator.hpp  README.md  Tricorn.cpp  TricornGenerator.cpp  TricornGenerator.hpp  Utils.hpp
TBB-QuickSort/: CMakeLists.txt  QuickSort.hpp  Utils.hpp  main.cpp
TBB/data/: callgrind.out
pthreads/: CMakeLists.txt  CosineGenerator.cpp  CosineGenerator.hpp  FractalGenerator.hpp  Julia.cpp  README.md  Tricorn.cpp  fractal_performance_measurement.xlsx  julia_10pthreads_optim.cpp  julia_4pthreads_optim.cpp  julia_5pthreads_optim.cpp  julia_8pthreads_optim.cpp  julia_pthreads.cpp  julia_serial.cpp  mandelbrot_10pthreads_optim.cpp  mandelbrot_4pthreads_optim.cpp  mandelbrot_5pthreads_optim.cpp  mandelbrot_8pthreads_optim.cpp  mandelbrot_pthreads.cpp  mandelbrot_serial.cpp  tricorn_10pthreads_optim.cpp  tricorn_4pthreads_optim.cpp  tricorn_5pthreads_optim.cpp  tricorn_8pthreads_optim.cpp  tricorn_pthreads.cpp  tricorn_serial.cpp
pthreads/pthreads_labs_ex/: ex2_pthreads.c  ex3_pthreads.c  ex4_pthreads.c  ex5_pthreads.c  ex6_pthreads.c  ex_pthreads.c
